changed: final class